@@ -1,3 +1,7 @@
+2008-02-08  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
+
+	* Fixed bug #7450 (revisited): further corrections to localization of htmlArea RTE
+
 2008-02-08  Ingo Renner  <ingo@typo3.org>
 
 	* Release of TYPO3 4.2.0beta1a
